SFUSA/force-app/main/default/objects/PR_Detail__c/fields/Phasing_Without_Campaign_Spend__c.field-meta.xml
<CustomField>
        <fullName>Phasing_Without_Campaign_Spend__c</fullName>
        <description>This field will display the number of Phasing records with no Campaign Spends attached</description>
        <inlineHelpText>This field will display the number of Phasing records with no Campaign Spends attached</inlineHelpText>
        <label># Phasing Without Campaign Spend</label>
        <summaryFilterItems>
            <field>PR_Phasing__c.Campaign_Spend_Created__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>PR_Phasing__c.PR_Detail__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </CustomField>