SFUSA/force-app/main/default/objects/PR_Detail__c/fields/Plant__c.field-meta.xml
<CustomField>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US50</fullName>
                    <default>true</default>
                    <label>US50</label>
                </value>
                <value>
                    <fullName>USC0</fullName>
                </value>
                <value>
                    <fullName>US35</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>