SFUSA/force-app/main/default/objects/PR_Detail__c/fields/PR_Amount__c.field-meta.xml
<CustomField>
        <fullName>PR_Amount__c</fullName>
        <label>PR Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>