SFUSA/force-app/main/default/objects/PR_Detail__c/fields/PR_Amount_USD__c.field-meta.xml
<CustomField>
        <fullName>PR_Amount_USD__c</fullName>
        <formula>PR_Amount__c/(CURRENCYRATE(text(CurrencyIsoCode)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PR Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>