SFUSA/force-app/main/default/objects/PR_Detail__c/fields/PR_Header__c.field-meta.xml
<CustomField>
        <fullName>PR_Header__c</fullName>
        <label>PR Header</label>
        <referenceTo>PR_Header__c</referenceTo>
        <relationshipLabel>PR Details</relationshipLabel>
        <relationshipName>PR_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>