SFUSA/force-app/main/default/objects/PR_Detail__c/fields/PR_Phasing_Amount_Matching__c.field-meta.xml
<CustomField>
        <fullName>PR_Phasing_Amount_Matching__c</fullName>
        <formula>IF( PR_Amount__c&gt;0 &amp;&amp; ROUND(PR_Amount_USD__c,2)=ROUND(Phasing_Amount_USD__c,2),
IMAGE("/resource/1575356771000/Checked_Tick", "Checked_Tick",20,20),
IMAGE("/resource/1575356823000/Cross_Mark", "Cross_Mark",20,20))</formula>
        <label>PR &amp; Phasing Amount Matching?</label>
        <type>Text</type>
    </CustomField>