SFUSA/force-app/main/default/objects/PR_Detail__c/fields/SAP_Company_Code__c.field-meta.xml
<CustomField>
        <fullName>SAP_Company_Code__c</fullName>
        <formula>Campaign__r.SAP_Company_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Company Code</label>
        <type>Text</type>
    </CustomField>