SFUSA/force-app/main/default/objects/PR_Detail__c/fields/SAP_PR_Number__c.field-meta.xml
<CustomField>
        <fullName>SAP_PR_Number__c</fullName>
        <formula>PR_Header__r.SAP_PR_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP PR Number</label>
        <type>Text</type>
    </CustomField>