SFUSA/force-app/main/default/objects/PR_Detail__c/fields/Searchable__c.field-meta.xml
<CustomField>
        <fullName>Searchable__c</fullName>
        <externalId>true</externalId>
        <label>Searchable</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>