SFUSA/force-app/main/default/objects/PR_Detail__c/fields/StartMonth__c.field-meta.xml
<CustomField>
        <fullName>StartMonth__c</fullName>
        <label>Start Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PRMonths</valueSetName>
        </valueSet>
    </CustomField>