SFUSA/force-app/main/default/objects/PR_Detail__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
        <fullName>Unique_Key__c</fullName>
        <description>Unique Key to identify the duplicate records</description>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>