SFUSA/force-app/main/default/objects/PR_Detail__c/validationRules/PR_Amount_validation.validationRule-meta.xml
<ValidationRule>
        <fullName>PR_Amount_validation</fullName>
        <active>true</active>
        <description>PR Amount must be less than Campaign Balance.</description>
        <errorConditionFormula>AND( 
TEXT(PRIORVALUE(CurrencyIsoCode))=TEXT(CurrencyIsoCode),
PR_Header_Status__c='New',
PR_Amount__c &gt; Campaign_Balance__c
)</errorConditionFormula>
        <errorDisplayField>PR_Amount__c</errorDisplayField>
        <errorMessage>PR Amount must be less than Campaign Balance.</errorMessage>
    </ValidationRule>