SFUSA/force-app/main/default/objects/PR_Detail__c/validationRules/Rejection_Comments_Are_Required.validationRule-meta.xml
<ValidationRule>
        <fullName>Rejection_Comments_Are_Required</fullName>
        <active>false</active>
        <description>You must provide rejection comments.</description>
        <errorConditionFormula>AND(NOT(Approved__c),ISBLANK(Rejection_Comments__c))</errorConditionFormula>
        <errorDisplayField>Rejection_Comments__c</errorDisplayField>
        <errorMessage>You must provide rejection comments.</errorMessage>
    </ValidationRule>