SFUSA/force-app/main/default/objects/PR_Detail__c/validationRules/Validate_End_Date_with_Start_Date.validationRule-meta.xml
<ValidationRule>
        <fullName>Validate_End_Date_with_Start_Date</fullName>
        <active>true</active>
        <description>End month must be after start month and no later than December.</description>
        <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End month must be after start month and no later than December.</errorMessage>
    </ValidationRule>