SFUSA/force-app/main/default/objects/PR_Detail__c/validationRules/Validate_Start_Date_with_Today_Date.validationRule-meta.xml
<ValidationRule>
        <fullName>Validate_Start_Date_with_Today_Date</fullName>
        <active>true</active>
        <description>Start Month must be current month or later.</description>
        <errorConditionFormula>IF(AND($Permission.Bypass_PR_Validations,Start_Date__c &lt; Today()), 
	ADDMONTHS(Start_Date__c,1) &lt; Today(),
	Start_Date__c &lt; Today()
)</errorConditionFormula>
        <errorDisplayField>StartMonth__c</errorDisplayField>
        <errorMessage>Start Month must be current month or later.</errorMessage>
    </ValidationRule>